--- a/crudApp/Views/Home/Index.cshtml
+++ b/crudApp/Views/Home/Index.cshtml
@@ -1,8 +1,17 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    var names = (List<string>)ViewData["names"];
+
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <ul>
+        @{
+            foreach (var name in names)
+            {
+                <li>name</li>
+            }
+        }
+    </ul>
 </div>
